--- a/app/src/scss/index.css
+++ b/app/src/scss/index.css
@@ -5,55 +5,97 @@ body {
 }
 
 .restsplain {
-  max-width: 1024px;
   margin: 0 auto;
+  width: 100%;
+  position: relative;
+  background: #fff;
+}
+
+.restsplain * {
+  box-sizing: border-box;
+}
+
+.restsplain-sidebar {
+  margin: 0;
+  background: #fff;
+  float: left;
+  width: 300px;
 }
 
 .restsplain-header {
-  margin: 0 20px;
+  padding: 30px;
 }
 
 .restsplain-docs {
-  display: flex;
+  margin-left: 300px;
+  padding: 30px;
 }
 
 .restsplain-menu {
-  flex: 1 0 0;
-  margin: 0 20px;
+  padding: 30px;
+  background: #fff;
+}
+
+.restsplain-menu ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.restsplain-menu li {
+  margin-left: 10px;
+  padding: 0;
 }
 
 .restsplain-endpoints {
-  flex: 4 0 0;
-  margin: 0 20px;
+  margin: 20px 400px 0 0;
 }
 
-table {
+.restsplain-endpoint-data {
+  position: relative;
+  margin-bottom: 100px;
+}
+
+.restsplain-endpoint-response {
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  right: -430px;
+  width: 400px;
+  padding: 30px;
+}
+
+.restsplain-endpoint-response pre {
+  width: 100%;
+  overflow: auto;
+  max-height: 500px;
+}
+
+.restsplain table {
   margin: 20px 0;
   border: 1px solid #ccc;
   border-collapse: collapse;
   width: 100%;
 }
 
-thead {
+.restsplain thead {
   background: rgba(0,0,0,.1);
 }
 
-th {
+.restsplain th {
   text-align: left;
   padding: 10px;
   border-bottom: 1px solid #ccc;
 }
 
-td {
+.restsplain td {
   padding: 10px;
 }
 
-tbody tr:nth-child(2n) {
+.restsplain tbody tr:nth-child(2n) {
   background: rgba(0,0,0,.05);
 }
 
-.restsplain pre {
-  width: 100%;
-  overflow: auto;
-  max-height: 300px;
+.restsplain table pre {
+
 }
