--- a/app/src/scss/index.scss
+++ b/app/src/scss/index.scss
@@ -193,6 +193,13 @@
       background: rgba(0,0,0,.8);
       padding: 15px;
     }
+
+    > h2 {
+      margin-top: 3rem;
+      &:first-child {
+        margin-top: 0;
+      }
+    }
   }
 
   &-page-content {
