--- a/app/src/scss/index.scss
+++ b/app/src/scss/index.scss
@@ -21,7 +21,8 @@
   }
 
   h1, h2 {
-    margin-top: 0;
+	margin-top: 0;
+	overflow-wrap: break-word;
   }
 
   * {
@@ -150,7 +151,8 @@
 
     li {
       margin-left: 10px;
-      padding: 0;
+	  padding: 0;
+	  overflow-wrap: break-word;
     }
   }
 
